# Wrath

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
wrath/include/wrath/: component.h  content.h  entity.h  game.h  path.h  planet.h  renderer.h  shapes.h  universe.h  world.h
wrath/source/: content.cpp  entity.cpp  game.cpp  planet.cpp  renderer.cpp  shapes.cpp  universe.cpp
